change to done on mobile. fix style

--- a/hasjob/static/sass/_header.sass
+++ b/hasjob/static/sass/_header.sass
@@ -135,15 +135,6 @@ header
   ul.dropdown-menu
     max-height: 68vh
 
-.submit-filters
-  margin: 1px 10px 5px 0
-  padding-right: 0
-  width: auto
-
-.cancel-filters
-  margin: 1px 0 5px
-  padding: 0
-
 .pay-filter-dropdown 
   width: 100%
   padding: 5px 0
